--- a/codeV2/services/static/styles/indexStyles.css
+++ b/codeV2/services/static/styles/indexStyles.css
@@ -173,6 +173,7 @@ body {
 .valueIcon {
     color: white;
     position:relative;
+    width: 100%;
     top: calc(50% - .5em); /* 50% - 3/4 of icon height */
 }
 
@@ -266,7 +267,7 @@ color: #FFFFFF;
         font-family: 'Roboto Mono';
     font-style: normal;
     font-weight: 400;
-    font-size: 15vw;
+    font-size: 10vw;
     line-height: 47px;
     
     color: #FFFFFF;
@@ -359,11 +360,9 @@ color: #FFFFFF;
 
 
 .AboutMe .Info {
-    width: 653px;
-height: 424px;
-left: 0px;
-top: 244px;
-display: flex;
+    width: 100%;
+    height: 424px;
+    display: flex;
 }
 
 
@@ -383,16 +382,13 @@ color: #FFFFFF;
 }
 
 .mainSkills, .tools, .Experience, .Languages {
-    width: 196px;
-    height: 333px;
-    left: 8px;
-    top: 253px;
-    
+    width: 20%;
+    height: 333px;    
     }
 
 
 .mainSkills p, .tools p, .Experience p, .Languages p{
-    width: 140px;
+    width: 100%;
     height: 333px;
     left: -2px;
     top: 1px;
@@ -473,15 +469,15 @@ color: #FFFFFF;
 
 .Work {
     position: relative;
-    width: 1203px;
+    width: 90vw;
     height: 2100px;
-    margin-left: 10em;
+    margin-left: 5vw;
     margin-top: 30em;
 }
 
 .WorkText {
     position: relative;
-    width: 660px;
+    width: auto;
     height: 192px;
     left: 0px;
     top: 0px;    
@@ -502,17 +498,17 @@ color: #FFFFFF;
  }
 
 .Products, .Papers, .Projects, .InProgress {
-    width: 1192px;
+    width: 90vw;
     height: 456px;
     left: 11px;
     top: 225px;
 }
 
 .ProductHeader, .PaperHeader, .ProjectHeader, .InProgressHeader {
-    width: 777px;
-height: 119px;
-left: 0px;
-top: 3px;
+    width: auto;
+    height: 119px;
+    left: 0px;
+    top: 3px;
 
 } 
 
@@ -533,7 +529,7 @@ top: 3px;
  }
 
 .ProductHeader p, .PaperHeader p, .ProjectHeader p, .InProgressHeader p {
-    width: 773px;
+    width: auto;
     height: 27px;
     left: 4px;
     top: 61px;
@@ -549,7 +545,7 @@ top: 3px;
 
 
 .ProductCarousel, .PaperCarousel, .ProjectCarousel, .InProgressCarousel {
-    width: 1192px;
+    width: 90vw;
     height: 296px;
     left: 0px;
     top: 122px;
@@ -682,6 +678,7 @@ top: 3px;
 
 .caption {
     text-align: center;
+    height: auto;
 }
 
 .caption p span {
