--- a/codeV2/services/templates/index.html
+++ b/codeV2/services/templates/index.html
@@ -23,7 +23,7 @@
         <div class="NavBar">
             <a href="#" class="btn">Home<span>()</span></a>
             <a href="#AboutMe" class="btn"><span>me.</span>About<span>()</span></a>
-            <a href="#" class="btn"><span>me.</span>Contact<span>()</span></a>
+            <a href="#ContactMe" class="btn"><span>me.</span>Contact<span>()</span></a>
             <a href="#Work" class="btn"><span>me.</span>Work<span>()</span></a>
         </div>
 
@@ -425,7 +425,7 @@
         </div>
         </section>
         <section class="contact">
-            <div class="ContactMe">
+            <div class="ContactMe" id="ContactMe">
                 <div class="contactText">
                     <h1>me.<span class="function">Contact</span>()</h1>
                     <p>
