fixed aboutme styling on mobile device

--- a/codeV2/services/templates/index.html
+++ b/codeV2/services/templates/index.html
@@ -69,7 +69,7 @@
                     <div class="Info">
                         <div class="mainSkills">
                             <h3>
-                                Skillset
+                                Skills
                             </h3>
                             <p>
                                 Databases,<br>  
