--- a/codeV2/services/templates/index.html
+++ b/codeV2/services/templates/index.html
@@ -370,6 +370,19 @@
                                 </div>
                             </a>
                         </div>
+                        <div class="InProgressTile">
+                            <a href="debating404.com">
+                                <div class="InProgressItem" id="TeachX">
+                                    <img src="https://www.seekpng.com/png/detail/3-31564_anime-png-tumblr-rainbow-anime-girl-kawaii.png" alt="Impromptu">
+                                    <h3>
+                                        Impromptu
+                                    </h3>
+                                    <p>
+                                        "All things debate."
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
