--- a/codeV2/services/templates/index.html
+++ b/codeV2/services/templates/index.html
@@ -13,14 +13,20 @@
         <link rel="icon" href="https://cdn.discordapp.com/avatars/643764774362021899/8ec6aecedaaffd552ab154d9c308b32f.webp?size=1024">
         <script src="https://kit.fontawesome.com/1b4a129057.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <!--<script language="JavaScript" src="{{ url_for('static',filename='./js/custom.js') }}"></script>-->
+        <script language="JavaScript" src="{{ url_for('static',filename='./js/custom.js') }}"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/plugins/debug.addIndicators.min.js" integrity="sha512-RvUydNGlqYJapy0t4AH8hDv/It+zKsv4wOQGb+iOnEfa6NnF2fzjXgRy+FDjSpMfC3sjokNUzsfYZaZ8QAwIxg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     </head>
     <body>
         <div class="NavBar">
+            <!-- <div class="wrapper">                
+                <div class="line-menu half start"></div>
+                <div class="line-menu"></div>
+                <div class="line-menu half end"></div>      
+            </div> -->
             <a href="/" class="btn">Home<span>()</span></a>
             <a href="#AboutMe" class="btn"><span>me.</span>About<span>()</span></a>
             <a href="#ContactMe" class="btn"><span>me.</span>Contact<span>()</span></a>
