--- a/code/services/templates/index.html
+++ b/code/services/templates/index.html
@@ -101,6 +101,8 @@
                                 Java,<br>  
                                 GPT-3,<br>  
                                 OpenCV,<br>  
+                                numpy, <br>
+                                Pandas, <br>
                                 Unreal Engine,<br>  
                                 Blender,      <br> 
                                 Limelight, <br>  
@@ -212,7 +214,7 @@
                                 </div>
                             </a>
                         </div>
-                        <!--
+                        
                         <div class="ProductTile">
                             <a href="https://discord.com/api/oauth2/authorize?client_id=822265614244511754&permissions=8&scope=bot">
                                 <div class="ProductItem" id="Amoris">
@@ -226,7 +228,7 @@
                                 </div>
                             </a>
                         </div>
-                        -->
+                       
                         <div class="ProductTile">
                             <a href="https://www.spigotmc.org/resources/lives-smp.96177/">
                                 <div class="ProductItem" id="Lives SMP">
@@ -252,7 +254,7 @@
                     </div>
                     <div class="ProjectCarousel">
                         <div class="ProjectTile">
-                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                            <a href="docs.google.com/document/d/1_yqAvAPJ5UYAn3vQuKAiG6M5FvJACrHMLZhiMXVHW5s/export/pdf">
                                 <div class="ProjectItem" id="CodeRedRoboticsVision">
                                     <img src="https://pbs.twimg.com/profile_images/1350201636354977793/8etruElX_400x400.jpg" alt="Calcom">
                                     <h3>
@@ -260,6 +262,19 @@
                                     </h3>
                                     <p>
                                         "FRC 2022"
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="ProjectTile">
+                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                                <div class="ProjectItem" id="PROIHS">
+                                    <img src="https://cdn.britannica.com/90/7490-004-BAD4AA72/Flag-China.jpg" alt="Peoples republic of IHS">
+                                    <h3>
+                                        Peoples Republic of IHS
+                                    </h3>
+                                    <p>
+                                        "just a joke, chill"
                                     </p>
                                 </div>
                             </a>
@@ -315,7 +330,7 @@
                     </div>
                     <div class="PaperCarousel">
                         <div class="PaperTile">
-                            <a href="">
+                            <a href="docs.google.com/document/d/1_yqAvAPJ5UYAn3vQuKAiG6M5FvJACrHMLZhiMXVHW5s/export/pdf">
                                 <div class="PaperItem" id="CodeRedRoboticsVision">
                                     <img src="https://pbs.twimg.com/profile_images/1350201636354977793/8etruElX_400x400.jpg" alt="Calcom">
                                     <h3>
