--- a/code/services/templates/index.html
+++ b/code/services/templates/index.html
@@ -432,7 +432,7 @@
                     </div>
                 </div>
                 <div class="PleasureItem">
-                    <a href="">
+                    <a href="/exercise">
                         <img src="https://i.pinimg.com/736x/56/1f/6a/561f6abb9160c5b7d00a19561505801a--wallpaper-for-iphone-wallpaper.jpg" alt="Exercise">
                     </a>
                     <div class="caption">
