--- a/code/services/templates/index.html
+++ b/code/services/templates/index.html
@@ -115,22 +115,22 @@
                             </h3>
                             <p>
                                 <span>Webapp developer and Cofounder</span> 
-                                @Pycalc X<br>
+                                <a href="https://pycalc.com" target="_blank">@Pycalc X</a><br>
                                 2021 - now <br><br>  
 
                                 <span>Freelance</span> <br>
                                 2021 - now      <br><br>    
 
                                 <span>Datascience Research project</span> 
-                                @CodeBozu<br>
+                                <a href="https://codebozu.com" target="_blank">@CodeBozu</a><br>
                                 2021 <br><br>
 
                                 <span>Video editor and main developer</span> 
-                                @Debating404<br>
+                                <a href="https://debating404.com" target="_blank">@Debating404</a><br>
                                 2022 - now <br><br>  
                                 
                                 <span>Visions Member</span> 
-                                @Code Red<br>
+                                <a href="https://team639.org" target="_blank">@Code Red</a><br>
                                 2021 - now <br><br>       
                             </p>
                         </div>
@@ -362,6 +362,19 @@
                     </div>
                     <div class="InProgressCarousel">
                         <div class="InProgressTile">
+                            <a href="">
+                                <div class="InProgressItem" id="Foresight">
+                                    <img src="{{ url_for('static',filename='LOGONOTEXT.png') }}" alt="Foresight">
+                                    <h3>
+                                        Foresight
+                                    </h3>
+                                    <p>
+                                        "Stock analysis has never been so easy."
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="InProgressTile">
                             <a href="pycalc.com">
                                 <div class="InProgressItem" id="TeachX">
                                     <img src="https://static.wixstatic.com/media/a8c221_4e1f5aa42d0b420f973891894b2bb07a~mv2.png/v1/fill/w_560,h_352,al_c,q_85,usm_0.66_1.00_0.01/a8c221_4e1f5aa42d0b420f973891894b2bb07a~mv2.webp" alt="TeachX">
@@ -400,6 +413,7 @@
                                 </div>
                             </a>
                         </div>
+
                     </div>
                 </div>
             </div>
