--- a/code/services/static/styles/indexStyles.css
+++ b/code/services/static/styles/indexStyles.css
@@ -431,6 +431,15 @@ color: #FFFFFF;
     color: #ADFF00;
 }
 
+.Experience a {
+    color: #FFE600;
+    transition: all 0.3s;
+}
+
+.Experience a:hover {
+    color:#DB00FF;
+}
+
 
 .Visuals{
     width: 40%;
@@ -620,7 +629,7 @@ color: #FFFFFF;
 }
 
 .ProductItem p, .PaperItem p, .ProjectItem p, .InProgressItem p{
-    width: 100%px;
+    width: 100%;
     height: 30px;
     left: 48px;
     top: 238px;
